# af-component-agent

./: .gitignore  .licenserc.yaml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  RELEASE.yaml  Taskfile.yaml  Taskfile.yaml.disable  Taskfile.yml  af_component_agent_macros.jinja  copier-module.yaml  copier.yml  metadata.yml  pyproject.toml
.cursor/: BUGBOT.md
.cursor/rules/: agent-migration-workflow.mdc
.github/: .licenserc.yaml  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github_disabled/: afcomponentagent-docker-test.yaml
.harness/: Build_af_component_agent_1752223405520-pr-trigger-input-set-1752223407422.yaml  Build_af_component_agent_1752223405520-push-trigger-input-set-1752223408816.yaml  default_input_set.yaml
docs/: DESIGN.md  development.md
extensions/: datarobot_feature_flags.py  dotenv_lookup.py
fixtures/: Taskfile.yml  custom.py
fixtures/infra/: Taskfile.yml  __init__.py  __main__.py  llm.py  mcp_server.py  pyproject.toml  web.py
scripts/: check_genai_cve_overrides.py  dotenv_has_key.py  write_mem0_env.py
template/: Taskfile.yml.jinja  Taskfile_{{agent_app_name}}.yml.jinja  pyproject.toml.jinja  {% if create_root_taskfile %}Taskfile.yml.jinja{% endif %}  {% if create_root_taskfile %}Taskfile.yml{% endif %}
template-rendered/: pyproject.toml  pyproject.toml.jinja
tests/: __init__.py  test-cli.sh  test_agent_dotenv_yaml.py  test_copier_agent_memory_validation.py  test_datarobot_feature_flags.py  test_dotenv_has_key.py  test_dotenv_lookup.py  test_infra_template.py  test_write_mem0_env.py
tests/e2e/: e2e.py  (+13 more)
(+311 files in other folders)
