[project]
name = "infra"
version = "0.0.1"
description = """
This is a template for DataRobot Agents.
"""
requires-python = ">=3.11"

dependencies = [
    "datarobot-pulumi-utils>=0.1.2",
    "pulumi>=3.175.0",
    "pulumi-datarobot>=0.10.27",
    "jinja2>=3.1.5,<4.0",
    "pytz>=2024.1" # Temporary fix for datarobot pandas issue
]


[project.optional-dependencies]
dev = [
    "pytest-cov>=6.1.1",
    "pytest>=7.4.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "types-PyYAML>=6.0.12"
]
